--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 ==========================TODO==========================
 -Login
-	-Fehlermeldung bei falscher Eingabe
+	-Fehlermeldung bei falscher Eingabe hinzufügen
 	-pwd und mail verschlüsselt übertragen
 
 -Fahrzeugübersicht
@@ -22,4 +22,3 @@
 	-Seite mit anderen Browsern testen
 	-Seite auf Mobilgeräten testen
 	-Passwörter als Hash speichern
-	
