--- a/TODO.txt
+++ b/TODO.txt
@@ -1,26 +1,29 @@
-﻿==========================TODO==========================
+﻿=============Allgemein=============
+-Passwörter als Hash speichern
+-Setter für PK entfernen
+-AlternativText für Bilder
+-Pseudodaten löschen und alles aus DB auslesen
+-Seite mit anderen Browsern testen
+-Seite auf Mobilgeräten testen
+-Datenbankabfragen case-insensitive machen
+-Datenbank anlegen/ mit Testdaten füllen wenn nicht vorhanden/ leer - Automatisch beim Verbindungsaufbau (JDBC)
+-Testdaten erweitern (z.B. um Buchungen)
+
+
+=============Seitenspezifisch=============
+-Main
+	-Abstand Bildschirmrand und Inhalt vereinheitlichen (Logo, Navigation, Content, Footer)
+	-Breite der 3 Buttons in der Navigation fixieren damit sie beim Mouseover nicht mehr verschoben werden
+	-Logo springt ebenfalls von klein auf groß beim verkleinern des Browsers 
+
 -Login
-	-Fehlermeldung bei falscher Eingabe hinzufügen
-	-pwd und mail verschlüsselt übertragen
+	-Fehlermeldung bei falscher Eingabe ausgeben
+	-pwd [und mail] verschlüsselt übertragen
 
 -Fahrzeugübersicht
 	-Daten werden bei reload dupliziert
 	-Bilder auf gleiche Größe zuschneiden
 	-Bilder sollten beim verkleinern des Browsers durchgehend kleiner werden, aktuell springen sie bei etwa halber Bildschirmgröße
-
--Pseudodaten löschen und alles aus DB auslesen
-
--Main
-	-Abstand Bildschirmrand und Inhalt vereinheitlichen (Logo, Navigation, Content, Footer)
-	-Breite der 3 Buttons in der Navigation fixieren damit sie beim Mouseover nicht mehr verschoben werden
-	-Logo springt ebenfalls von klein auf groß beim verkleinern des Browsers 
 	
 -Kontakt
 	-Pflichtfelder als solche Kennzeichnen
-	
--Allgemein
-	-Seite mit anderen Browsern testen
-	-Seite auf Mobilgeräten testen
-	-Passwörter als Hash speichern
-	-Setter für PK entfernen
-	-AlternativText für Bilder
