--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,14 @@
-﻿=============Allgemein=============
+﻿=======EILT DB ANFRAGEN=======
+-für die funktion fahrzeugwahl() benötigen wir eine sql abfrage die alle autos im ausgewählten
+ zeitraum anzeigt
+-in der funktion buchen() benötigen wir einen sql befehl, der die Daten des Kunden, sowie des gewählten autos in der Buchungstabelle speichert.
+- in der Funktion checkRegistrieren() wird ein SQl Befehl benötigt der einen neuen Kunden anlegt
+
+=============Allgemein=============
 -Datenbankverbindung schließen
 -Passwörter als Hash speichern
 -Setter für PK entfernen
--AlternativText für Bilder
 -Pseudodaten löschen und alles aus DB auslesen
--Seite mit anderen Browsern testen
--Seite auf Mobilgeräten testen
 -Datenbankabfragen case-insensitive machen (falls nicht ohnehin Standard?)
 -Automatisch beim Verbindungsaufbau (JDBC) Datenbank anlegen/ mit Testdaten füllen wenn nicht vorhanden/ leer
 -Testdaten erweitern (z.B. um Buchungen)
@@ -15,16 +18,11 @@ Observer Pattern einbauen! am Besten vor den Websockets
 -> siehe unoprojekt
 Websockets --> wenn zwei User das gleiche Fahrzeug wählen
 
-Anfrage Daten in doppeltem Hashset speichern und dann mit Id oder so auslesen
 
 
 
 
 =============Seitenspezifisch=============
--Main
-	-Abstand Bildschirmrand und Inhalt vereinheitlichen (Logo, Navigation, Content, Footer)
-	-Breite der 3 Buttons in der Navigation fixieren damit sie beim Mouseover nicht mehr verschoben werden
-	-Logo springt von klein auf groß beim verkleinern des Browsers
 
 -Login
 	-pwd gehashed übertragen
@@ -32,7 +30,4 @@ Anfrage Daten in doppeltem Hashset speichern und dann mit Id oder so auslesen
 -Fahrzeugübersicht
 	-Bilder auf gleiche Größe zuschneiden
 	-Bilder sollten beim verkleinern des Browsers durchgehend kleiner werden, aktuell springen sie bei etwa halber Bildschirmgröße
-	
--Kontakt
-	-Pflichtfelder als solche Kennzeichnen
 
